--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         &copy; Copyright <strong><span>WMS</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-       Designed by <a href="">Janak Bista </a> and <a href="">Image Kunwar </a>
+       Designed by <a href="">Mohd Sibtayn Rza </a> , <a href="">Dhruv Verma </a> and <a href="">Rishi Kumar </a>
       </div>
     </div>
   </footer><!-- End Footer -->
